--- a/package.json
+++ b/package.json
@@ -16,26 +16,28 @@
     "@types/react-dom": "^18.3.7",
     "@types/react-redux": "^7.1.34",
     "@types/socket.io-client": "^1.4.36",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "babel-loader": "^10.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
-    "eslint": "^8.2.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^2.7.0",
+    "globals": "^16.0.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.2",
     "mini-css-extract-plugin": "^2.9.2",
+    "prettier": "^3.5.3",
     "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
     "typescript": "^5.5.0",
@@ -48,18 +50,8 @@
     "start": "webpack serve --mode development",
     "build": "webpack",
     "build-analyze": "cross-env ANALYZE=true npm run build",
-    "lint": "eslint src/**/*.{ts,tsx}",
-    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
-    "precommit": "lint-staged",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,tsx,ts,less,scss,md,json}": [
-      "prettier --write",
-      "lint:fix",
-      "eslint --max-warnings 0 .",
-      "git add"
-    ]
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
