--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^5.4.0",
@@ -40,7 +41,7 @@
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
-    "typescript": "^5.5.0",
+    "typescript": "^5.8.3",
     "webpack": "^5.99.8",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
