--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "Dashboard",
+  "author": "Max Shefov",
+  "sideEffects": false,
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/node": "^7.27.1",
@@ -19,6 +22,8 @@
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "babel-loader": "^10.0.0",
+    "babel-plugin-direct-import": "^1.0.0",
+    "babel-plugin-import": "^1.13.8",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
@@ -39,6 +44,7 @@
     "lint-staged": "^15.5.2",
     "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.5.3",
+    "terser-webpack-plugin": "^5.3.14",
     "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
@@ -49,12 +55,14 @@
   },
   "scripts": {
     "start": "webpack serve --mode development",
+    "prod": "webpack --mode production",
     "build": "webpack",
     "build-analyze": "cross-env ANALYZE=true npm run build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.27.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
