--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "noEmit": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "webpack.*.js", "config/**/*"]
 }
