--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
   },
   "rules": {
     "import/prefer-default-export": "off",
+    "react/require-default-props": "off",
     "prettier/prettier": "error",
     "react/function-component-definition": [
       "error",
