--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/css-modules": "^1.0.5",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.21",
@@ -44,6 +45,7 @@
     "lint-staged": "^15.5.2",
     "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.5.3",
+    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.14",
     "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
@@ -63,12 +65,11 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.27.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@supabase/supabase-js": "^2.49.4",
+    "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
