add changing color, stroke width, file adding

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "Dashboard",
   "author": "Max Shefov",
-  "sideEffects": false,
+  "sideEffects": [
+    "*.css"
+  ],
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/node": "^7.27.1",
