--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dashboard",
+  "name": "dashboard",
   "author": "Max Shefov",
   "sideEffects": [
     "*.css"
@@ -21,12 +21,12 @@
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.3.7",
     "@types/react-redux": "^7.1.34",
-    "@types/socket.io-client": "^1.4.36",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-direct-import": "^1.0.0",
     "babel-plugin-import": "^1.13.8",
+    "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
@@ -71,14 +71,31 @@
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/express": "^4.17.22",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "express": "^4.21.2",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
-  }
+  },
+  "version": "1.0.0",
+  "description": "Разбить конфиг на прод и дев Выпилить иконки и шрифт увеличившие вес бандла(500 kb)",
+  "main": "webpack.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ShefovMax/Dashboard.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ShefovMax/Dashboard/issues"
+  },
+  "homepage": "https://github.com/ShefovMax/Dashboard#readme"
 }
